fix: the height of the header figure has been corrected when viewed on tablets

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -372,6 +372,7 @@ footer figure {
 
   .about-me figure {
     width: 100%;
+    max-height: max-content;
     transform: scale(130%);
   }
 
